--- a/index.html
+++ b/index.html
@@ -1,8 +1,45 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
 	<head>
-			
+		<meta charset="utf-8" />
+		<title>Hello word page</title> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		
+		
+		<link rel="stylesheet" type="text/css"  
+			href="/bootstrap/css/bootstrap.min.css"
+		></link>
+		<link rel="stylesheet" type="text/css"  
+			href="/bootstrap/css/bootstrap-theme.min.css"
+		></link>
+		
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.4.0/jquery-migrate.min.js" ></script>
+		
+		<script type="text/javascript" 
+			src="/bootstrap/js/bootstrap.min.js" 
+		></script>
+		
+		
 	</head>
 	<body>
-		<h1>Hello word</h1>	
+			
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12">
+					<div style="text-align:center">
+						<h1>Hello word page</h1>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<div style="text-align:center">
+						<div><a href="http://flexboxgrid.com/" target="_blank">Flexbox original</a></div>
+						<div><a href="/flexbox/" target="_blank">My Flexbox fork</a></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
