--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="col-xs-12">
 					<div style="text-align:center">
 						<div><a href="http://flexboxgrid.com/" target="_blank">Flexbox original</a></div>
-						<div><a href="/flexbox/" target="_blank">My Flexbox fork</a></div>
+						<div><a href="/flexbox/">My Flexbox fork</a></div>
 					</div>
 				</div>
 			</div>
