--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -27,59 +27,20 @@
 		<link rel="stylesheet" type="text/css"  
 			href="/flexbox/css/iblock.css"
 		></link>
+		
 		<script type="text/javascript" 
 			src=" /flexbox/js/respond.min.js" 
 		></script>
+		
+		<link rel="stylesheet" type="text/css"  
+			href="/flexbox/css/colors.css"
+		></link>
 	
 	</head>
 	<body>
 			
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12">
-					<div style="text-align:center">
-						<h1>Hello word page</h1>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<div style="text-align:center">
-						<div><a href="http://flexboxgrid.com/" target="_blank">Flexbox original</a></div>
-						<div><a href="/flexbox/">My Flexbox fork</a></div>
-					</div>
-				</div>
-			</div>
-		</div>
 		
 		
-		<style>
-			.red{
-				background:red;
-			}
-			.blue{
-				background:blue;
-			}
-			.green{
-				background:green;
-			}
-			.black{
-				background:black;
-			}
-			.delimeter{
-				height:5px;
-				width:100%;
-			}
-			.width100{
-				width:100%;
-			}
-			.ta_c{
-				text-align:center;
-			}
-			.box-large {
-				height: 5em;
-			}
-		</style>
 	<!-------------------------------------------------------------->		
 		<div class="ta_c width100">Responsive</div>
 		<div> BOOTSTRAP</div>
