--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -38,13 +38,14 @@
 	
 	</head>
 	<body>
-			
+	<div class="wrap">	
 		
 		
-	<!-------------------------------------------------------------->		
+		<!-------------------------------------------------------------->		
 		<div class="ta_c width100">Responsive</div>
-		<div> BOOTSTRAP</div>
-		<div class="container">
+		<h4> BOOTSTRAP</h4>
+		<br/>
+		<div class="container slategray" >
 			<div class="row">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 red">
 					123123123
@@ -669,6 +670,6 @@
 		<br/>
 		
 		
-		
+	</div>	
 	</body>
 </html>
