--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -42,27 +42,11 @@
 		
 		
 		<!-------------------------------------------------------------->		
-		<div class="ta_c width100">Responsive</div>
-		<h4> BOOTSTRAP</h4>
+		<h4 class="ta_c width100">Responsive</h4>
 		<br/>
-		<div class="container slategray" >
-			<div class="row">
-				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 red">
-					123123123
-				</div>
-				<div class="col-xs-6 col-sm-6 col-md-8 col-lg-10 green">
-					123123123
-				</div>
-				<div class="col-xs-6 col-sm-3 col-md-2 col-lg-1 blue">
-					123123123
-				</div>
-			</div>
-		</div>
-		
-		<br/>
-		<div> FLEXBOX</div>
+		<h4> FLEXBOX </h4>
 		<div class="container flexbox-grid">
-			<div class="row">
+			<div class="row slategray example_row">
 				<div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 red">
 					<div>
 						123123123
