--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -102,23 +102,23 @@
 		<div class="container-fluid flexbox-grid">
 			<div class="row whitesmoke example_row">
 				<div class="col-xs-12 red">
-					1
+					FLEXBOX GRID
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-1 green example_col">
-					1231
+					FLEXBOX GRID
 				</div>
 				<div class="col-xs-11 blue example_col">
-					123123
+					FLEXBOX GRID
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-2 honeydew example_col">
-					123123
+					FLEXBOX GRID
 				</div>
 				<div class="col-xs-10 gold example_col">
-					123123
+					FLEXBOX GRID
 				</div>
 			</div>
 		</div>
@@ -129,23 +129,23 @@
 		<div class="container-fluid iblock-grid">
 			<div class="row">
 				<div class="col-xs-12 red">
-					1
+					IBLOCK GRID
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-1 green">
-					1231
+					IBLOCK GRID
 				</div>
 				<div class="col-xs-11 blue">
-					123123
+					IBLOCK GRID
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-2 blue">
-					123123
+					IBLOCK GRID
 				</div>
 				<div class="col-xs-10 red">
-					123123
+					IBLOCK GRID
 				</div>
 			</div>
 		</div>
