--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -105,7 +105,7 @@
 					FLEXBOX GRID
 				</div>
 			</div>
-			<div class="row">
+			<div class="row whitesmoke example_row">
 				<div class="col-xs-1 green example_col">
 					FLEXBOX GRID
 				</div>
@@ -113,7 +113,7 @@
 					FLEXBOX GRID
 				</div>
 			</div>
-			<div class="row">
+			<div class="row whitesmoke example_row">
 				<div class="col-xs-2 honeydew example_col">
 					FLEXBOX GRID
 				</div>
@@ -127,12 +127,12 @@
 		<br/>
 		<h4>IBLOCK</h4>
 		<div class="container-fluid iblock-grid">
-			<div class="row">
+			<div class="row whitesmoke example_row">
 				<div class="col-xs-12 red">
 					IBLOCK GRID
 				</div>
 			</div>
-			<div class="row">
+			<div class="row whitesmoke example_row">
 				<div class="col-xs-1 green">
 					IBLOCK GRID
 				</div>
@@ -140,11 +140,11 @@
 					IBLOCK GRID
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-xs-2 blue">
+			<div class="row whitesmoke example_row">
+				<div class="col-xs-2 honeydew">
 					IBLOCK GRID
 				</div>
-				<div class="col-xs-10 red">
+				<div class="col-xs-10 gold">
 					IBLOCK GRID
 				</div>
 			</div>
